# A_First_Approach_to_Quantum_Logical_Shape_Classification_Framework

./: .gitignore  README.md  create_signal.py  eval.py  main.py  plottings.py  pyproject.toml  raw_data_generator.py  testing_outputs.ipynb
Tests/: test_norm_matrix.py  test_pc_computation.py  test_quanten_matching.py
config/: conf.py  log.yaml  settings.env  settings.yaml
src/data/: raw_data_generator.py
src/models/: create_features.py  create_normalisation.py
src/visualization/: dataframe_generation.py  plottings.py
