[tool.poetry]
name = "a-first-approach-to-quantum-logical-shape-classification-framework"
version = "0.1.0"
description = "later"
authors = ["Alex <koehlale@b-tu.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "a_first_approach_to_quantum_logical_shape_classification_framework"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
